learning-resources-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learning-resources-api
spec:
  selector:
    matchLabels:
      app: learning-resources-api
  template:
    metadata:
      labels:
        app: learning-resources-api
    spec:
      containers:
      - name: learning-resources-api
        image: jeffrygonzalez/learning-resource-api:v0.1
        ports:
          - containerPort: 80
