learning-resources-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learning-resources-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    name: learning-resources-api-ingress
spec:
  ingressClassName: nginx

  tls:
    - hosts:
      - api.hypertheory-training.com
      secretName: mkcert

  rules:
  - host: api.hypertheory-training.com
    http:
      paths:
      - pathType: Prefix
        path: /v1/resources(/|$)(.*)
        backend:
          service:
            name: learning-resources-api-service
            port: 
              number: 80
